[project]
name = "Point Tool"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.27.1",
  "pandas",
  "numpy"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Point Tool"

# company name to display in about app dialogs
company = ""

# copyright text to display in about app dialogs
copyright = ""

[tool.flet.app]
path = "src"